# sprycer-v2

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  PLAN.md  README.md  TODOS.md  fly.toml  manage.py  pyproject.toml
core/: admin.py  alerts.py  embeddings.py  matching.py  models.py  money.py  urls.py  views.py
core/exporters/: __init__.py  offer_export.py
core/importers/: __init__.py  schleiper.py
core/management/commands/: embed_offers.py  generate_export.py  migrate_legacy.py  process_imports.py  run_matching.py  scrape.py  seed_pages.py  verify_pgvector.py
core/migrations/: 0001_initial.py  0002_alter_offer_common_sku_alter_offer_ean_and_more.py  0003_priceobservation_unique_price_observation.py
core/scrapers/: __init__.py  geant.py  rougier.py  runner.py
core/tests/: test_alerts.py  test_embeddings.py  test_extract_legacy_dump.py  test_geant_scraper.py  test_matching.py  test_migrate_legacy.py  test_offer_export.py  test_rougier_scraper.py  test_schleiper_importer.py  test_seed_pages.py  test_views.py
core/tests/fixtures/: schleiper_mini.csv
scripts/: extract_legacy_dump.py  load_legacy_extract.sh
sprycer/: asgi.py  settings.py  urls.py  wsgi.py
templates/exports/: list.html  new.html
templates/imports/: list.html  new.html  show.html
templates/layouts/: base.html
templates/matchings/: _card.html  _card_resolved.html  list.html
templates/registration/: login.html
