[project]
name = "sprycer"
version = "0.1.0.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "python-decouple>=3.8",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "openai>=1.50",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-django>=4.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sprycer.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-q --tb=short"
